Fixes name for portfolio project

--- a/index.html
+++ b/index.html
@@ -340,13 +340,13 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Subkey</h2>
+                            <h2>Keysub</h2>
                             <hr class="star-primary">
                             <img src="img/subkey.png" class="img-responsive img-centered" alt="">
                             <p>A web application built with a Ruby on Rails and Postgres database backend and a jQuery and Handlebars frontend. This application allows users to find roommates through searching or listing apartments that are available for rent.</p>
                             <ul class="list-inline item-details">
                                 <li>Website:
-                                    <strong><a href="http://kaylal12.github.io/Project4_frontend/">Subkey</a>
+                                    <strong><a href="http://kaylal12.github.io/Project4_frontend/">Keysub</a>
                                     </strong>
                                 </li>
                                 <li>Frontend repo:
