Removes website link from bottom of project pages. Adds link in h2 title of project pages with icon

--- a/index.html
+++ b/index.html
@@ -303,15 +303,11 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>packRat</h2>
+                            <h2><a href="http://midden.github.io/packRat-frontend/">packRat <i class="fa fa-external-link"></i></a></h2>
                             <hr class="star-primary">
                             <img src="img/midden.png" class="img-responsive img-centered" alt="">
                             <p>A file storage Express application with a Mongo database back end and a jQuery/Bootstrap frontend.  The flexibility of our storage model is inspired by these fury little builders. Packrats also called woodrats, build complex houses or dens made of twigs, cactus joints, and other materials. These contain several nest chambers, food caches, and debris piles. These debris piles are called Middens, and have been know to preserve materials gathered by the packrats for 50, 000. </p>
                             <ul class="list-inline item-details">
-                                <li>Website:
-                                    <strong><a href="http://midden.github.io/packRat-frontend/">packRat</a>
-                                    </strong>
-                                </li>
                                 <li>Frontend repo:
                                     <strong><a href="https://github.com/Midden/packRat-frontend">here</a>
                                     </strong>
@@ -340,15 +336,11 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Keysub</h2>
+                            <h2><a href="http://kaylal12.github.io/Project4_frontend/">Keysub <i class="fa fa-external-link"></i></a></h2>
                             <hr class="star-primary">
                             <img src="img/subkey.png" class="img-responsive img-centered" alt="">
                             <p>A web application built with a Ruby on Rails and Postgres database backend and a jQuery and Handlebars frontend. This application allows users to find roommates through searching or listing apartments that are available for rent.</p>
                             <ul class="list-inline item-details">
-                                <li>Website:
-                                    <strong><a href="http://kaylal12.github.io/Project4_frontend/">Keysub</a>
-                                    </strong>
-                                </li>
                                 <li>Frontend repo:
                                     <strong><a href="https://github.com/kaylal12/Project4_frontend">here</a>
                                     </strong>
