--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-sm-6 portfolio-item">
+                <div class="col-sm-4 portfolio-item">
                     <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
@@ -105,7 +105,7 @@
                         <img src="img/midden.png" class="img-responsive" alt="">
                     </a>
                 </div>
-                <div class="col-sm-6 portfolio-item">
+                <div class="col-sm-4 portfolio-item">
                     <a href="#portfolioModal2" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
@@ -115,17 +115,17 @@
                         <img src="img/subkey.png" class="img-responsive" alt="">
                     </a>
                 </div>
-                <!-- <div class="col-sm-6 portfolio-item">
+                <div class="col-sm-4 portfolio-item">
                     <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/github.png" class="img-responsive" style="height:200px;width:500px">
+                        <img src="img/art.png" class="img-responsive" style="">
                     </a>
                 </div>
-                <div class="col-sm-6 portfolio-item">
+                <!-- <div class="col-sm-6 portfolio-item">
                     <a href="#portfolioModal4" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
@@ -308,6 +308,10 @@
                             <img src="img/midden.png" class="img-responsive img-centered" alt="">
                             <p>A file storage Express application with a Mongo database back end and a jQuery/Bootstrap frontend.  The flexibility of our storage model is inspired by these fury little builders. Packrats also called woodrats, build complex houses or dens made of twigs, cactus joints, and other materials. These contain several nest chambers, food caches, and debris piles. These debris piles are called Middens, and have been know to preserve materials gathered by the packrats for 50, 000. </p>
                             <ul class="list-inline item-details">
+                                <li>Webpage:
+                                    <strong><a href="http://midden.github.io/packRat-frontend/">here</a>
+                                    </strong>
+                                </li>
                                 <li>Frontend repo:
                                     <strong><a href="https://github.com/Midden/packRat-frontend">here</a>
                                     </strong>
@@ -341,6 +345,10 @@
                             <img src="img/subkey.png" class="img-responsive img-centered" alt="">
                             <p>A web application built with a Ruby on Rails and Postgres database backend and a jQuery and Handlebars frontend. This application allows users to find roommates through searching or listing apartments that are available for rent.</p>
                             <ul class="list-inline item-details">
+                                <li>Webpage:
+                                    <strong><a href="http://kaylal12.github.io/Project4_frontend/">here</a>
+                                    </strong>
+                                </li>
                                 <li>Frontend repo:
                                     <strong><a href="https://github.com/kaylal12/Project4_frontend">here</a>
                                     </strong>
@@ -369,11 +377,19 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Github</h2>
+                            <h2><a href="http://kaylal12.github.io/art_portfolio/">Art Portfolio <i class="fa fa-external-link"></i></a></h2>
                             <hr class="star-primary">
-                            <!-- <img src="img/portfolio/circus.png" class="img-responsive img-centered" alt=""> -->
-                            <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
+                            <img src="img/art.png" class="img-responsive img-centered" alt="">
+                            <p>My personal art portfolio website build with HTML and CSS. This project focuses on the frontend aspects of web development and was a personal project for me to be able to create my own art portfolio site.</p>
                             <ul class="list-inline item-details">
+                                <li>Webpage:
+                                    <strong><a href="http://kaylal12.github.io/art_portfolio/">here</a>
+                                    </strong>
+                                </li>
+                                <li>Github repo:
+                                    <strong><a href="https://github.com/kaylal12/art_portfolio">here</a>
+                                    </strong>
+                                </li>
                             </ul>
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                         </div>
