Fixes typo for art portfolio description

--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
                             <h2><a href="http://kaylal12.github.io/art_portfolio/">Art Portfolio <i class="fa fa-external-link"></i></a></h2>
                             <hr class="star-primary">
                             <img src="img/art.png" class="img-responsive img-centered" alt="">
-                            <p>My personal art portfolio website build with HTML and CSS. This project focuses on the frontend aspects of web development and was a personal project for me to be able to create my own art portfolio site.</p>
+                            <p>My personal art portfolio website built with HTML, CSS, and some jQuery. This project focuses on the frontend aspects of web development and was a personal project for me to be able to create my own art portfolio site.</p>
                             <ul class="list-inline item-details">
                                 <li>Webpage:
                                     <strong><a href="http://kaylal12.github.io/art_portfolio/">here</a>
